--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/three": "^0.155.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.155.0"
   }
 }
